replaced links to methodology and guidance document

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -73,9 +73,9 @@
     "SBT Temperature Scoring. The latter two methods, Portfolio Coverage and Temperature Scoring, require assessing the targets\n",
     "disclosed by the companies within a financial institution's portfolio.\n",
     "\n",
-    "Financial institutions may use the portfolio coverage and/or [temperature scoring methods](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf)\n",
+    "Financial institutions may use the portfolio coverage and/or [temperature scoring methods](https://sciencebasedtargets.org/wp-content/uploads/2020/09/Temperature-Rating-Methodology-V1.pdf)\n",
     "to set targets for their corporate instruments, including corporate debt, listed equity and bonds, and private equity and\n",
-    "debt (See relevant “Required Activities” in Table 5-2 of the [SBTi guidance](https://sciencebasedtargets.org/financial-institutions)\n",
+    "debt (See relevant “Required Activities” in Table 5-2 of the [SBTi guidance](https://sciencebasedtargets.org/wp-content/uploads/2020/10/Financial-Sector-Science-Based-Targets-Guidance-Pilot-Version.pdf)\n",
     "to drive adoption of science-based targets).\n",
     "\n",
     "To use the *portfolio coverage method*, financial institutions commit to engaging with their investees to set their own\n",
@@ -102,7 +102,7 @@
     "The SBTi has developed a codebase to function as a calculator for the portfolio coverage and temperature scoring methods.\n",
     "This tool is fed with the necessary data to generate temperature scores at the company and portfolio level, in addition\n",
     "to providing analytics on target setting . The code reflects the logical steps that are outlined in the publicly available\n",
-    "[temperature scoring methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf),\n",
+    "[temperature scoring methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/09/Temperature-Rating-Methodology-V1.pdf),\n",
     "develped by [CDP](https://www.cdp.net/) and [WWF](https://wwf.panda.org/).\n",
     "\n",
     "The tool was created to enable the widespread implementation of the method by data providers and financial institutions,\n",
@@ -180,7 +180,7 @@
     "f. Revenue\n",
     "\n",
     "Refer to [Data Requirements](https://ofbdabv.github.io/SBTi/DataRequirements.html#) for full documentation.\n",
-    "Also refer to the full methodology for [temperature scoring](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf)."
+    "Also refer to the full methodology for [temperature scoring](https://sciencebasedtargets.org/wp-content/uploads/2020/09/Temperature-Rating-Methodology-V1.pdf)."
    ]
   },
   {
@@ -930,7 +930,7 @@
     "* Option 6: Total Assets emissions weighted temperature score (AOTS)\n",
     "* Option 7: Revenue owned emissions weighted temperature score (ROTS)\n",
     "\n",
-    "Please see Section 3 of the [temperature scoring methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) for further details of the weighting calculation steps.\n",
+    "Please see Section 3 of the [temperature scoring methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/09/Temperature-Rating-Methodology-V1.pdf) for further details of the weighting calculation steps.\n",
     "\n",
     "The financial information imported through the in the data_provider_example.xlxs at the start of this process is used to weight the individual companies in a portfolio. For example, the EOTS, uses the portfolio invested value as a portion of the company’s enterprise value to weight the company’s temperature score. The scores at the company level are aggregated for both scope 1+2, and for scope 1+2+3, generating two portfolio scores for the selected time period.\n",
     "\n",
