use md headers instead of bold texts

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -142,12 +142,12 @@
     "the analysis. This can come from a variety of sources, but must be inputted in the required formats. Four types of data are\n",
     "needed to run the calculator. These are described in the table below.\n",
     "\n",
-    "**Company identifiers**\n",
+    "#### Company identifiers\n",
     "\n",
     "Company name, ISIC (International Standard Industrial Classification) sector classification, and ISIN (if relevant) or other\n",
     "company identifier are required to be fed into the tool.\n",
     "\n",
-    "**Corporate GHG targets**\n",
+    "#### Corporate GHG targets\n",
     "\n",
     "This refers to the data required to analyse a corporate GHG reduction target, including:\n",
     "* Target types (absolute/intensity)\n",
@@ -158,11 +158,11 @@
     "* % achieved\n",
     "* Intensity activity (if appliable)\n",
     "\n",
-    "**GHG Emission Data**\n",
+    "#### GHG Emission Data\n",
     "\n",
     "Both scope 1+2 and scope 3 emissions data, either reported or modelled.\n",
     "\n",
-    "**Portfolio financial data**\n",
+    "#### Portfolio financial data\n",
     "\n",
     "Seven weighting option are currently available to aggregate company scores to produce portfolio scores.\n",
     "Depending on the option chosen, the following data may be required:\n",
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Install the SBTi Python module**\n",
+    "#### Install the SBTi Python module\n",
     "\n",
     "This is only required if you haven't already installed the SBTi module. The next two cells load the required Python packages to use the SBTi tool."
    ]
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Download resources for Google Colab environment**\n",
+    "#### Download resources for Google Colab environment\n",
     "\n",
     "This is only required if you are using Google Colab. Otherwise, just skip this section.\n",
     "The following cell retrieves the example data and plotting functionality and places it in this Google Colab environment, so that it\n",
@@ -327,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Logging** \n",
+    "#### Logging\n",
     "\n",
     "The following cell initialises the Python standard library logging utilities. The SBTi module makes use of these utilities\n",
     "to send log messages on warnings or errors that can arise during use of the module, which help the user to pinpoint\n",
@@ -354,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create a data provider**\n",
+    "#### Create a data provider\n",
     "\n",
     "By running the following cell, you load our example data. If you want to score your own portfolio, this is where you can upload data\n",
     "from your data provider or your own data lake. Please refer to [Data Requirements](https://ofbdabv.github.io/SBTi/DataRequirements.html#) for a\n",
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load your portfolio**\n",
+    "#### Load your portfolio\n",
     "\n",
     "In this example, the portfolio data is stored as a CSV file. If you wish to replace the portfolio file with your own portfolio file,\n",
     "your CSV file should at least have a \"company_id\" column (the identifier of the company) and a \"investment value\" column (the amount\n",
@@ -576,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**How to convert a target to a temperature?**\n",
+    "#### How to convert a target to a temperature?\n",
     "\n",
     "Since companies often have multiple climate targets, covering different scopes and timeframes, a protocol is then used to\n",
     "aggregate all target data into scores at a company level. This protocol defines the minimum quality criteria for determining\n",
@@ -592,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Scope Classification**\n",
+    "#### Scope Classification\n",
     "\n",
     "The targets are first sorted by scope. The table below provides examples of how these targets are classified into either\n",
     "scope 1+2 or scope 3. For combined targets (scope 1+2+3) where the underlying composition is not clear (i.e. the % scope\n",
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Timeframe**\n",
+    "#### Timeframe\n",
     "\n",
     "The targets are the sorted by timeframe.\n",
     "\n",
@@ -619,7 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Scope Coverage**\n",
+    "#### Scope Coverage\n",
     "\n",
     "The scope coverage determines the amount of emissions in the scope that are covered by the target. For scope 1+2 targets, all targets that are greater than 95% coverage are valid, no further revision needs to be undertaken. The ambition of the target is however, normalised to the relative boundary coverage of the target. For all scope 1+2 targets under 95% coverage, and scope 3 targets under 67% coverage, the ambition of the target is therefore linked to the coverage. This means an ambitious target covering only a small portion of the scope emissions would be weighted lower as a result of the reduced coverage. The temperature score for the scope is computed using the following equation, where TS is temperature score:\n",
     "\n",
@@ -630,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Company Temperature Scores**\n",
+    "#### Company Temperature Scores\n",
     "\n",
     "One representative score is produced for each of the following six options, displayed in the table below.\n",
     "\n",
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Default Score**\n",
+    "#### Default Score\n",
     "\n",
     "For companies who do not have valid targets, or if they do not have sufficient information covering a particular scope or timeframe, a default score is applied. The temperature rating methodology will use a 3.2°C value as an interim solution to derive temperature scores for companies with no forward-looking targets. This implies that these companies are expected to decarbonise along a 3.2°C pathway, consistent with global policies implemented to ensure reduction of emissions at this rate. The tool enables users to choose their own default score at the following temperatures: 3.2°C, 3.9°C or 4.5°C."
    ]
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Calculate the company temperature scores**\n",
+    "#### Calculate the company temperature scores\n",
     "\n",
     "The temperature score is calculated via the following steps:\n",
     "* Target validation protocol: Here all targets are sorted by time frame and scope per company. For each combination a 'best' target is chosen.\n",
@@ -972,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Portfolio coverage**\n",
+    "#### Portfolio coverage\n",
     "\n",
     "The portfolio coverage gives insights in the coverage of portfolio entities that have set GHG emissions reduction targets, STBi-validated or otherwise. Companies with SBTi status Approved have a score of 100%, all others have a score of 0%.\n",
     "The aggregation method used for the portfolio coverage is the same as for the temperature score. If you want to change that you can do so in the previous section."
@@ -1019,7 +1019,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Analysing hotspots**\n",
+    "#### Analysing hotspots\n",
     "\n",
     "The first analysis of your portfolio could be to understand if you have any particular hotspots in your portfolio. We can do that by analysing different groupings of companies.\n",
     "\n",
@@ -1057,7 +1057,7 @@
     "The aggregated scores can then be used, for example, to show the relation between sectors and regions with respect to temperature score.\n",
     "A visualization of this relation is shown in the heatmap below. The grey fields indicate that the portfolio contains no assest for those combinations.\n",
     "\n",
-    "*Quick analysis*\n",
+    "##### Quick analysis\n",
     "\n",
     "We can see here that our North American (NA) Health Care, Asian Consumer discretionary, and NA and Asian IT are in reasonable shape,\n",
     "but that we have many sectors across the globe that have a large number of companies with default scores, where we need to engage\n",
@@ -1197,7 +1197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sector analysis**\n",
+    "#### Sector analysis\n",
     "\n",
     "Sector analysis may help us with bringing some clarity into our analysis from the heatmap above. In order to identify the companies that your portfolio would most benefit from engaging with, we can start with identifying the biggest contributing sectors to the portfolio's temperature score, as in our example below.\n",
     "\n",
@@ -1211,7 +1211,7 @@
     "To change the time frame, replace the extension \"S1S2\" in EScope.S1S2 (the second line) to S3 or S1S2S3.\n",
     "To change the grouping, replace 'sector' (the third line) to the category variable you are interested in.\n",
     "\n",
-    "*Quick analysis*\n",
+    "##### Quick analysis\n",
     "\n",
     "In this example we can see that Materials, Financials, Energy, Consumer Staples and the Communication sectors are all scoring above 3.0C. From the pie charts we can also see that Materials, Financials and Consumer Staples are contributing more to the temperature score than their weight in the portfolio."
    ]
@@ -1377,14 +1377,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Companies to engage with**\n",
+    "#### Companies to engage with\n",
     "\n",
     "In addition to statistics of the companies grouped by a given category, as we did with the sector analysis above, you can analyse the companies' individual contributions to the portfolio temperature score across the whole portfolio, as we have done below. Alternatively we can use the information we gathered above to do the below analysis for one of the identified sectors. To reiterate, the contribution column shows the contribution of a specific company to the overall portfolio temperature score. The computation of these contributions differs, in accordance with the aggregation methods explained above.\n",
     "\n",
     "In this analysis we are also choosing to display temperature score, ownership and portfolio weight. Therefore, we can use this table to analyse which companies we may have a better chance of having a successful engagement with.\n",
     "We show the top 10 contributing companies. To see more or fewer companies change the '10' near the end of the line in \"[:10]\".\n",
     "\n",
-    "*Quick analysis*\n",
+    "##### Quick analysis\n",
     "\n",
     "In this case we are primarily looking at our ownership of the company in relation to the contribution to find companies which we may be able to influence and where our work will have an impact on our portfolio TS.\n",
     "\n",
@@ -1611,13 +1611,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Portfolio temperature score impact**\n",
+    "#### Portfolio temperature score impact\n",
     "\n",
     "In our what-if analysis, we can now add Company Q and Company AM with company IDs CA0000000017 and FR0000120644 to to the companies which have set a target. Please note that our example portfolio file contains a column named \"engagement_target\". The companies with values of 1.0 in this column are included in this scenario. The cell below adds Company Q and Company AM to these other predefined companies in the portfolio, which were already marked for engagement.\n",
     "\n",
     "You can add more companies to target by copying line 2 or 3 of the following cell and replacing the company ID by the ID of your selected company.\n",
     "\n",
-    "*Quick analysis*\n",
+    "##### Quick analysis\n",
     "\n",
     "As we can see below, the impact on our portfolio TS of engaging with the companies selected for engagement reduces our portfolio temperatures score from 2.63C to 2.46C."
    ]
@@ -1677,14 +1677,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sector temperature score impact**\n",
+    "#### Sector temperature score impact\n",
     "\n",
     "We can dig in a bit deeper into our analysis to identify changes in sector temperature scores.\n",
     "\n",
     "In the two cell below we print the scenario effects on temperature score per sector and then display this data with pie charts and and a histogram.\n",
     "The first block shows the scope 1 and 2 mid-term temperature scores per sector calculated with the current temperature scores. The second block shows the temperature scores of the same categories, but now based on the what-if scenario where the chosen companies have set 2 degree targets.\n",
     "\n",
-    "*Quick analysis*\n",
+    "##### Quick analysis\n",
     "\n",
     "The Energy and Communication and Real Estate sectors are no longer scoring above 3.0C. We still need to do some work in the Consumer Staples, Materials and Financials sectors, to reduce these sector scores."
    ]
@@ -1777,7 +1777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Company temperature score contribution impact**\n",
+    "#### Company temperature score contribution impact\n",
     "\n",
     "If our engagement is successful we can see that both Company Q and Company AM would move down the list of biggest contributing companies to our TS."
    ]
