find/replace broken links

--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -7,7 +7,7 @@
     "# SBTi-Finance Tool for Temperature Scoring & Portfolio Coverage\n",
     "***Do you want to understand what drives the temperature score of your portfolio to make better engagement and investment decisions?***\n",
     "\n",
-    "![ExampleGraphs](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_HeroImage.jpg)"
+    "![ExampleGraphs](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_HeroImage.jpg)"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "Use the ToC in the left hand pane to navigate between sections.\n",
     "\n",
     "The notebook is not intended as a production tool, but for you to be able to evaluate if this tool can fit with your objectives\n",
-    " and workflow. The open source code for the tool is available at https://github.com/OFBDABV/SBTi, which should allow you\n",
+    " and workflow. The open source code for the tool is available at https://github.com/ScienceBasedTargets/SBTi-finance-tool, which should allow you\n",
     " to integrate it into your environment and then use as a production tool. A number of commercial data and services providers,\n",
     " such as CDP, Bloomberg, ISS, MSCI, TruCost, Urgentem and Ortec Finance are building or are considering providing solutions\n",
     " based on the open-source code or the methodology.\n",
@@ -47,11 +47,11 @@
     "To run the code in a notebook, simply click on a cell and press SHIFT+ENTER or click the black \"Play/Run cell\" button in\n",
     "between the brackets [ ] (hover over it with your mouse) in the upper left hand corner of each code cell.\n",
     "\n",
-    "![PlayButton](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_Play.png)\n",
+    "![PlayButton](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_Play.png)\n",
     "\n",
     "Google Colab might hide cells depending on your colab settings. Please press *CRTL+\\[* to expand all cells or select the option from the view menu in the toolbar, as shown below:\n",
     "\n",
-    "![ExpandButton](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_Colab_expand.png)\n",
+    "![ExpandButton](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_Colab_expand.png)\n",
     "\n",
     "Be aware that the session in this notebook is temporary. When you close it or leave it unused for a long period, you need to restart\n",
     "the notebook from the beginning.\n",
@@ -229,7 +229,7 @@
     "temperature score. This can be done by changing your exposure to your holdings in the portfolio import file or by rerunning the\n",
     "calculations using hypothetical scenarios.\n",
     "\n",
-    "![TSWorkflow](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_DataFlow.png)"
+    "![TSWorkflow](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_DataFlow.png)"
    ]
   },
   {
@@ -310,11 +310,11 @@
     "if not os.path.isdir(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/utils.py\", \"utils.py\")\n",
     "try:  # Import statement when run in Google Colabs\n",
     "    from utils import collect_company_contributions, plot_grouped_statistics, anonymize, print_aggregations, \\\n",
     "        plot_grouped_heatmap, print_scenario_gain, print_grouped_scores, get_contributions_per_group\n",
@@ -569,7 +569,7 @@
     "mapped to the power generation temperature pathway. The table below summarises the ISIC classifications and how the targets are mapped\n",
     "to regression models.\n",
     "\n",
-    "![RegressionModels](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_RegressionModels.png)"
+    "![RegressionModels](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_RegressionModels.png)"
    ]
   },
   {
@@ -585,7 +585,7 @@
     "Hence the scope coverage and the target year of the targets is necessary to accurately classify these targets. The below\n",
     "figure shows how targets are currently split by scope and timeframe.\n",
     "\n",
-    "![ScopesTimeframes](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_CompanyAggregation.png)"
+    "![ScopesTimeframes](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_CompanyAggregation.png)"
    ]
   },
   {
@@ -599,7 +599,7 @@
     "coverage), the ambition is applied only to the scope 1+2 portion, and the if no details on scope 3 coverage are provided,\n",
     "the scope 3 portion would receive the default score.\n",
     "\n",
-    "![ScopeClassification](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_Scopes.png)"
+    "![ScopeClassification](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_Scopes.png)"
    ]
   },
   {
@@ -638,7 +638,7 @@
     "\n",
     "For all companies with one valid target in each scope and timeframe, generate the 6 scores per company. For companies who do not report, for example a scope 3 target, they receive a default score. For companies with no valid targets, all 6 entries would receive default score (see below). The 6 entries are combined to produce an overall scope 1+2+3 score using the most recent reported GHG weighting of the company.\n",
     "\n",
-    "![ScopeTimeframeTable](https://github.com/OFBDABV/SBTi/raw/master/examples/images/JN_CompanyTS.PNG)"
+    "![ScopeTimeframeTable](https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/images/JN_CompanyTS.PNG)"
    ]
   },
   {
@@ -936,7 +936,7 @@
     "\n",
     "For analysing SBT Portfolio Coverage, the tool also displays the percentage of SBTi approved companies on the portfolio based on the same weighting approach.\n",
     "\n",
-    "In this example we use the \"Weighted Average Temperature Score\". For more details on how to use the various weighting options in the notebook, have a look at notebook 3 (\"3_portfolio_aggregations.ipynb\" in the examples folder in [GitHub](https://github.com/OFBDABV/SBTi)). The temperature scores are calculated per time-frame/scope combination.\n",
+    "In this example we use the \"Weighted Average Temperature Score\". For more details on how to use the various weighting options in the notebook, have a look at notebook 3 (\"3_portfolio_aggregations.ipynb\" in the examples folder in [GitHub](https://github.com/ScienceBasedTargets/SBTi-finance-tool)). The temperature scores are calculated per time-frame/scope combination.\n",
     "\n",
     "To change the aggregation method, replace the extension \"`WATS`\" in `PortfolioAggregationMethod.WATS` (the first line) with the abbreviation of the desired aggregation method, e.g. ECOTS, from the list of aggregation options above.\n",
     "The output displays the portfolio temperature score for the time frame and the scopes you have selected."
