--- a/examples/5_reporting.ipynb
+++ b/examples/5_reporting.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install SBTi"
+    "%pip install SBTi"
    ]
   },
   {
@@ -84,11 +84,11 @@
     "if not os.path.isdir(\"data\"):\n",
     "    os.mkdir(\"data\")\n",
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
     "if not os.path.isfile(\"utils.py\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/master/examples/utils.py\", \"utils.py\")\n",
+    "    urllib.request.urlretrieve(\"https://github.com/ScienceBasedTargets/SBTi-finance-tool/raw/main/examples/utils.py\", \"utils.py\")\n",
     "\n",
     "try:  # Import statement when run in Google Colabs\n",
     "    from utils import  print_aggregations, print_grouped_scores, anonymize, print_percentage_default_scores\n",
