--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install SBTi\n",
+    "%pip install sbti-finance-tool\n",
     "\n",
     "# Install other Python modules required to use this notebook\n",
     "%pip install matplotlib==3.2.2\n",
@@ -357,7 +357,7 @@
     "#### Create a data provider\n",
     "\n",
     "By running the following cell, you load our example data. If you want to score your own portfolio, this is where you can upload data\n",
-    "from your data provider or your own data lake. Please refer to [Data Requirements](https://ofbdabv.github.io/SBTi/DataRequirements.html#) for a\n",
+    "from your data provider or your own data lake. Please refer to [Data Requirements](https://sciencebasedtargets.github.io/SBTi/DataRequirements.html#) for a\n",
     "full description of the data and formats needed.\n",
     "\n",
     "By specifying a data provider, you can connect to the data source of your choice, e.g. CDP, Urgentem, your own data lake, etc. In this\n",
@@ -392,7 +392,7 @@
     "\n",
     "In this example, the portfolio data is stored as a CSV file. If you wish to replace the portfolio file with your own portfolio file,\n",
     "your CSV file should at least have a \"company_id\" column (the identifier of the company) and a \"investment value\" column (the amount\n",
-    "of money invested in each of the companies in your portfolio e.g. the value of the shares you hold). Please refer to [Data Requirements](https://ofbdabv.github.io/SBTi/DataRequirements.html#) for a full description of the data and formats needed.\n",
+    "of money invested in each of the companies in your portfolio e.g. the value of the shares you hold). Please refer to [Data Requirements](https://sciencebasedtargets.github.io/SBTi/DataRequirements.html#) for a full description of the data and formats needed.\n",
     "To change the portfolio file, follow the same steps as for the data provider, described above.\n",
     "Next, change the file location between the quotes below: replace '`example_portfolio`' with your_filename (don't remove the double quotes in the cell below)."
    ]
@@ -2168,7 +2168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2182,7 +2182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.7"
   },
   "pycharm": {
    "stem_cell": {
